Commit 2: New page for the schedule and calendar

--- a/ClubRecordings.html
+++ b/ClubRecordings.html
@@ -74,6 +74,7 @@
             <li><a href="GetConnected.html">Get Connected</a></li>
             <li class="active"><a href="ClubRecordings.html">Club Recordings</a></li>
             <li><a href="Resources.html">Resources</a></li>
+            <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
         </ul>
         </div>
     </div>
