--- a/GetConnected.html
+++ b/GetConnected.html
@@ -75,6 +75,7 @@
         <li class="active"><a href="GetConnected.html">Get Connected</a></li>
         <li><a href="ClubRecordings.html">Club Recordings</a></li>
         <li><a href="Resources.html">Resources</a></li>
+        <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
       </ul>
     </div>
   </div>
