--- a/Resources.html
+++ b/Resources.html
@@ -75,6 +75,7 @@
                     <li><a href="GetConnected.html">Get Connected</a></li>
                     <li><a href="ClubRecordings.html">Club Recordings</a></li>
                     <li class="active"><a href="Resources.html">Resources</a></li>
+                    <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
                 </ul>
             </div>
         </div>
