--- a/GetConnected.html
+++ b/GetConnected.html
@@ -82,25 +82,34 @@
 </nav>
   
 <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">    
-    <div class="row content" style="height: 100%;">
-    <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-    </div>
-    <div class="col-sm-10 text-left"> 
-      <h1>How to Get Connected</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
-    </div>
-
-  </div>
+      <div class="row">
+        <div class="col-xs-7 col-sm-6 col-lg-8">
+          <a href="https://discord.gg/JFq44mJ">
+            <img src="pictures/discord.svg" style="width:50px; height:50px;"></img>
+          </a>
+        </div>
+        <div class="col-xs-7 col-sm-6 col-lg-8">
+          <a href="https://www.youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ">
+            <img src="pictures/youtube.svg" style="width:50px; height:50px;"></img>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-7 col-sm-6 col-lg-8">
+          <a href="https://twitter.com/devilsecasu">
+            <img src="pictures/twitter.svg" style="width:50px; height:50px;"></img>
+          </a>
+        </div>
+        <div class="col-xs-7 col-sm-6 col-lg-8">
+        <a href="https://www.twitch.tv/devilsec">
+          <img src="pictures/twitch.svg" style="width=50px; height:50px;"</img>
+        </a>
+        </div>
+      </div>
 </div>
 
 <footer id="footer" class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>&copy; DevilSec 2022 </p>
 </footer>
 
 </body>
