added text and better responsize sizing to row elements

--- a/GetConnected.html
+++ b/GetConnected.html
@@ -55,10 +55,10 @@
       }
       .row.content {height:auto;} 
     }
+
   </style>
 </head>
 <body>
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -81,29 +81,34 @@
   </div>
 </nav>
   
-<div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">    
+<div class="container-fluid text-center" style="height: 100%; padding-top: 60px; padding-bottom: 60px;">    
       <div class="row">
-        <div class="col-xs-7 col-sm-6 col-lg-8">
+        <div class="col-sm-3">
           <a href="https://discord.gg/JFq44mJ">
-            <img src="pictures/discord.svg" style="width:50px; height:50px;"></img>
+            <img src="pictures/discord.svg" alt="Join our Discord!" style="width:50px; height:50px;"></img>
           </a>
+        <div class ="col-sm-4"><p>Join our Discord server!</p></div>
+        
         </div>
-        <div class="col-xs-7 col-sm-6 col-lg-8">
+        <div class="col-sm-3">
           <a href="https://www.youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ">
-            <img src="pictures/youtube.svg" style="width:50px; height:50px;"></img>
+            <img src="pictures/youtube.svg" alt="Watch us on YouTube!" style="width:50px; height:50px;"></img>
           </a>
+        <div class="col-sm-4"><p>Watch our videos!</p></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-7 col-sm-6 col-lg-8">
+        <div class="col-sm-3">
           <a href="https://twitter.com/devilsecasu">
-            <img src="pictures/twitter.svg" style="width:50px; height:50px;"></img>
+            <img src="pictures/twitter.svg" alt="Read our Tweets!" style="width:50px; height:50px;"></img>
           </a>
+        <div class="col-sm-4"><p>Follow us on Twitter!</p></div>
         </div>
-        <div class="col-xs-7 col-sm-6 col-lg-8">
+        <div class="col-sm-3">
         <a href="https://www.twitch.tv/devilsec">
-          <img src="pictures/twitch.svg" style="width=50px; height:50px;"</img>
+          <img src="pictures/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"</img>
         </a>
+        <div class="col-sm-4"><p>See us live on Twitch!</p></div>
         </div>
       </div>
 </div>
