fixed formatting and added col-xs span

--- a/GetConnected.html
+++ b/GetConnected.html
@@ -56,7 +56,7 @@
       .row.content {height:auto;} 
     }
 
-  </style>
+</style>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -81,35 +81,32 @@
   </div>
 </nav>
   
-<div class="container-fluid text-center" style="height: 100%; padding-top: 60px; padding-bottom: 60px;">    
+<div class="container-fluid text-left" style="padding-left:75px; padding-top: 70px; padding-bottom: 60px;">    
       <div class="row">
-        <div class="col-sm-3">
-          <a href="https://discord.gg/JFq44mJ">
-            <img src="pictures/discord.svg" alt="Join our Discord!" style="width:50px; height:50px;"></img>
-          </a>
-        <div class ="col-sm-4"><p>Join our Discord server!</p></div>
-        
-        </div>
-        <div class="col-sm-3">
-          <a href="https://www.youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ">
-            <img src="pictures/youtube.svg" alt="Watch us on YouTube!" style="width:50px; height:50px;"></img>
-          </a>
-        <div class="col-sm-4"><p>Watch our videos!</p></div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <a href="https://twitter.com/devilsecasu">
-            <img src="pictures/twitter.svg" alt="Read our Tweets!" style="width:50px; height:50px;"></img>
-          </a>
-        <div class="col-sm-4"><p>Follow us on Twitter!</p></div>
-        </div>
-        <div class="col-sm-3">
-        <a href="https://www.twitch.tv/devilsec">
-          <img src="pictures/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"</img>
-        </a>
-        <div class="col-sm-4"><p>See us live on Twitch!</p></div>
-        </div>
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-12">
+              <a href="https://discord.gg/JFq44mJ">
+                  <img src="pictures/discord.svg" alt="Join our Discord!" style="width:50px; height:50px;"></img>
+              </a>
+              <p>Join our Discord server!</p>
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-12">
+              <a href="https://www.youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ">
+                  <img src="pictures/youtube.svg" alt="Watch us on YouTube!" style="width:50px; height:50px;"></img>
+              </a>
+              <p>Watch our YouTube videos!</p>
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-12">
+              <a href="https://twitter.com/devilsecasu">
+                  <img src="pictures/twitter.svg" alt="Read our Tweets!" style="width:50px; height:50px;"></img>
+              </a>
+              <p>Follow us on Twitter!</p>
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-12">
+              <a href="https://www.twitch.tv/devilsec">
+                  <img src="pictures/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"</img>
+              </a>
+              <p>See us live on Twitch!</p>
+          </div>
       </div>
 </div>
 
