Commit 3: *Created the base layout of the home page *Changed the DSSchedule to show active when on that current page

--- a/DSSchedule.html
+++ b/DSSchedule.html
@@ -72,11 +72,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="HomePage.html">Home</a></li>
+        <li><a href="HomePage.html">Home</a></li>
         <li><a href="GetConnected.html">Get Connected</a></li>
         <li><a href="ClubRecordings.html">Club Recordings</a></li>
         <li><a href="Resources.html">Resources</a></li>
-        <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
+        <li class="active"><a href="DSSchedule.html">Schedule/Calendar</a></li>
       </ul>
     </div>
   </div>
