--- a/HomePage.html
+++ b/HomePage.html
@@ -4,6 +4,7 @@
   <title>DevilSec</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Important for bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -22,6 +23,7 @@
     html, body {
         margin: 0;
         height: 100%;
+        color: white;
     }
     
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -38,11 +40,10 @@
     footer {
       background-color: #555;
       color: white;
-      padding: 15px;
+      padding: 8px;
     }
 
     #footer {
-        position:fixed;
         bottom:0;
         left:0;
         width: 100%;
@@ -56,9 +57,54 @@
       }
       .row.content {height:auto;} 
     }
+
+    .style2
+    {
+      margin: 0 auto; 
+      color: #FFC627;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+    }
+
+    .boxes{
+      border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
+      color: white;
+      margin: 20px;
+      box-shadow: 20px 20px #FFC627;
+      transition: all .4s ease;
+    }
+
+    .boxes:hover
+    {
+      border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
+      box-shadow: 10px 10px #8c1d40;
+    }
+
+    .grid2x2 {
+      min-height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+    }
+
+    .grid2x2 > div {
+      display: flex; 
+      flex-basis: calc(50% - 40px);  
+      justify-content: center;
+      flex-direction: column;
+    }
+    
+    .grid2x2 > div > div {
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+    }
   </style>
 </head>
-<body>
+<body style="background-color: #202020;">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -68,7 +114,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-    <a href="HomePage.html"><img  src="pictures/DevilSecLogo.png"  height="50" width="50"/></a>
+      <a href="HomePage.html"><img  src="pictures/DevilSecLogo.png"  height="50" width="50"/></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -83,26 +129,48 @@
 </nav>
   
 <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">    
-    <div class="row content" style="height: 100%;">
-        <div class="col-sm-2 sidenav">
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
-        <p><a src="pictures/DevilSecLogo.png" href="HomePage.html" height="50" width="50"></a>
-        </p>
+  <div class="row content" style="height: 100%;">
+    <div class="col-sm-14 text-middle"> 
+      <div class="container" style="margin-bottom: 15px;">
+        <div class="p-5 my-4 bg-light rounded-3">
+          <h1 class="style2" style="font-size:150px;">DevilSec</h1>
+          <p class="lead">Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
+          <p>
+            <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+            <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+            <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+            <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+          </p>
         </div>
-        <div class="col-sm-10 text-left"> 
-        <h1>Welcome</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <hr>
-        <h3>Test</h3>
-        <p>Lorem ipsum...</p>
+        <div class="grid2x2">
+          <div class="col-md-5 boxes">
+              <h2>HEADER1</h2>
+              <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
+              <p><a href="https://www.tutorialrepublic.com/html-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
+          </div>
+          <div class="col-md-5 boxes">
+              <h2>HEADER2</h2>
+              <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
+              <p><a href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
+          </div>
+          <div class="col-md-5 boxes">
+              <h2>HEADER3</h2>
+              <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
+              <p><a href="https://www.tutorialrepublic.com/javascript-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
+          </div>
+          <div class="col-md-5 boxes">
+              <h2>HEADER4</h2>
+              <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
+              <p>
+                <a href="https://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a>
+              </p>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
 <footer id="footer" class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>&copy; DevilSec 2022</p>
 </footer>
 
 </body>
