--- a/ClubRecordings.html
+++ b/ClubRecordings.html
@@ -41,7 +41,7 @@
     }
 
     #footer {
-        position:fixed;
+        position: relative;
         bottom:0;
         left:0;
         width: 100%;
@@ -80,26 +80,18 @@
     </div>
     </nav>
     
-    <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">    
-        <div class="row content" style="height: 100%;">
-        <div class="col-sm-2 sidenav">
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
+    <div class="container-fluid text-center" style="padding-top: 60px; padding-left: 40px; padding-bottom: 40px;">    
+      <div class="row content">
+        <div class="col-sm-12 text-left">
+            <h1>Club Recordings</h1>
         </div>
-        <div class="col-sm-10 text-left"> 
-        <h1>Club Recordings</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <hr>
-        <h3>Test</h3>
-        <p>Lorem ipsum...</p>
+        <div class="col-sm-12 text-left" style="padding-top: 20px; padding-left: 40px;">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+      </div>
     </div>
-    </div>
-
     <footer id="footer" class="container-fluid text-center">
-    <p>Footer Text</p>
+      <p>&copy; DevilSec 2022 </p>
     </footer>
-
 </body>
 </html>
