Improved margins around the schedule column headers

--- a/DSSchedule.html
+++ b/DSSchedule.html
@@ -62,6 +62,15 @@
         margin-bottom: 1em;
     }
 
+    .column-header{
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+
+    .column-title{
+        margin-bottom: 0.8em;
+    }
+
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
         .sidenav {
@@ -156,8 +165,10 @@
                     <div class="col-md-3">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
-                            <h2>Presentations</h2>
-                            <p>Upcoming presentations on a particular topic followed by a workshop.</p>
+                            <div class="column-header">
+                                <h2 class="column-title">Presentations</h2>
+                                <p>Upcoming presentations on a particular topic.</p>
+                            </div>
                             <div class="row row-cols-1 boxes gy-5">
                                 <div class="col">
                                     <h3>Lorem Ipsum</h3>
@@ -194,8 +205,10 @@
                     <div class="col-md-3">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
-                            <h2>Competitions</h2>
-                            <p>Upcoming competitions and CTFs</p>
+                            <div class="column-header">
+                                <h2 class="column-title">Competitions</h2>
+                                <p>Upcoming competitions and CTFs</p>
+                            </div>
                             <div class="row row-cols-1 boxes">
                                 <div class="col">
                                     <h3>Lorem Ipsum</h3>
@@ -232,8 +245,10 @@
                     <div class="col-md-3">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
-                            <h2>Guest Speakers</h2>
-                            <p>Upcoming guest speaker presentations</p>
+                            <div class="column-header">
+                                <h2 class="column-title">Guest Speakers</h2>
+                                <p>Upcoming guest speaker presentations</p>
+                            </div>
                             <div class="row row-cols-1 boxes">
                                 <div class="col">
                                     <h3>Lorem Ipsum</h3>
@@ -270,8 +285,10 @@
                     <div class="col-md-3">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
-                            <h2>Lorem</h2>
-                            <p>Upcoming lorem ipsum</p>
+                            <div class="column-header">
+                                <h2 class="column-title">Lorem</h2>
+                                <p>Upcoming lorem ipsum</p>
+                            </div>
                             <div class="row row-cols-1 boxes">
                                 <div class="col">
                                     <h3>Lorem Ipsum</h3>
