Renamed last schedule column and fixed typos

--- a/DSSchedule.html
+++ b/DSSchedule.html
@@ -207,7 +207,7 @@
                         <div class="col-md-8">
                             <div class="column-header">
                                 <h2 class="column-title">Competitions</h2>
-                                <p>Upcoming competitions and CTFs</p>
+                                <p>Upcoming competitions and CTFs.</p>
                             </div>
                             <div class="row row-cols-1 boxes">
                                 <div class="col">
@@ -247,7 +247,7 @@
                         <div class="col-md-8">
                             <div class="column-header">
                                 <h2 class="column-title">Guest Speakers</h2>
-                                <p>Upcoming guest speaker presentations</p>
+                                <p>Upcoming guest speaker presentations.</p>
                             </div>
                             <div class="row row-cols-1 boxes">
                                 <div class="col">
@@ -286,8 +286,8 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
                             <div class="column-header">
-                                <h2 class="column-title">Lorem</h2>
-                                <p>Upcoming lorem ipsum</p>
+                                <h2 class="column-title">Miscellaneous</h2>
+                                <p>Upcoming miscellaneous events.</p>
                             </div>
                             <div class="row row-cols-1 boxes">
                                 <div class="col">
