removed text-decoration for commit c678cce5a914b018aa82dc9ff1236ecc0355f8aa

--- a/GetConnected.html
+++ b/GetConnected.html
@@ -46,6 +46,10 @@
         left:0;
         width: 100%;
     }
+
+    a {
+        text-decoration: none !important
+    }
     
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
