--- a/Resources.html
+++ b/Resources.html
@@ -32,7 +32,9 @@
       background-color: #f1f1f1;
       height: 100%;
     }
-    
+    a {
+        text-decoration: none !important
+    }
     /* Set black background color, white text and some padding */
     footer {
       background-color: #555;
@@ -54,6 +56,16 @@
         padding: 15px;
       }
       .row.content {height:auto;} 
+    }
+
+    .div-highlight {
+        border-radius: 5px;
+        background: #FFC627;
+    }
+
+    p:hover {
+        color: #8C1D40;
+        background: #FFC627;
     }
   </style>
 </head>
@@ -81,25 +93,54 @@
         </div>
     </nav>
   
-    <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">    
-        <div class="row content" style="height: 100%;">
-    <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-    </div>
-    <div class="col-sm-10 text-left"> 
-      <h1>Resources</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">    
+    <div class="col-sm-10 text-center"> 
+      <h1>Getting Started</h1>
+      <b>Cybersecurity encompasses so many areas that it's hard to know where to start. Here are some of our recommendations for learning and practicing the basics when it comes to hacking the web and beyond!</b>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="div-highlight">
+            <h3>Where to practice</h3>
+            </div>
+            <a href="https://overthewire.org/wargames/bandit/"><p>Over the Wire</p></a>
+            <a href="https://www.hackthebox.com/"><p>Hack the Box</p></a>
+            <a href="https://portswigger.net/"><p>Port Swigger</p></a>
+            <a href="https://tryhackme.com/"><p>Try Hack Me</p></a>
+            <p>And for our blue team friends...</p>
+            <a href="https://cyberdefenders.org/"><p>Cyber Defenders</p></a>
+            <a href="https://blueteamlabs.online/"><p>Blue Team Labs</p></a>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="div-highlight">
+            <h3>Where to learn Linux</h3>
+            </div>
+            <a href="https://linuxjourney.com/"><p>Linux Journey</p></a>
+            <a href="https://www.linuxcommand.org/"><p>Linux Command</p></a>
+        </div></div>
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="div-highlight">
+            <h3>Stay in the know</h3>
+            </div>
+            <a href="https://owasp.org/Top10/"><p>OWASP Top Ten</p></a>
+            <a href="https://krebsonsecurity.com/"><p>Krebs on Security</p></a>
+            <a href="https://blog.malwarebytes.com/"><p>Malwarebytes Blog</p></a>
+            <a href="https://www.bleepingcomputer.com/"><p>Bleeping Computer</p></a>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="div-highlight">
+            <h3>Recommended reading</h3>
+            </div>
+            <a href="https://dfirmadness.com/getting-into-infosec/the-five-pillars/"><p>The Five Pillars</p></a>
+            <a href="http://www.catb.org/esr/faqs/hacker-howto.html"><p>How to become a hacker</p></a>
+        </div>
+      </div>
     </div>
-  </div>
 </div>
 
 <footer id="footer" class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>&#169; DevilSec 2022</p>
 </footer>
 
 </body>
