adding resources page

--- a/Resources.html
+++ b/Resources.html
@@ -107,7 +107,7 @@
             <a href="https://www.hackthebox.com/"><p>Hack the Box</p></a>
             <a href="https://portswigger.net/"><p>Port Swigger</p></a>
             <a href="https://tryhackme.com/"><p>Try Hack Me</p></a>
-            <p>And for our blue team friends...</p>
+            <i>And for our blue team friends...</i>
             <a href="https://cyberdefenders.org/"><p>Cyber Defenders</p></a>
             <a href="https://blueteamlabs.online/"><p>Blue Team Labs</p></a>
         </div>
