--- a/GetConnected.html
+++ b/GetConnected.html
@@ -173,7 +173,7 @@
         <a href="https://www.twitch.tv/devilsec" target="_blank">
         <div class="div-highlight4">
             <span onmouseover="mouseHover()" onmouseout="mouseHover()">
-            <img src="pictures/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"></img>
+            <img src="pictures/twitch.svg" alt="See us live on Twitch!" style="width:50px; height:50px;"></img>
                 <p>See us live on Twitch!</p>
             </span>
         </div>
