Implemented header and footer components in all pages

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -4,28 +4,7 @@
         <title>DevilSec Club Recordings</title>
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="HomePage.html"><img  src="pictures/DevilSecLogo.png"  height="50" width="50"/></a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="HomePage.html">Home</a></li>
-                        <li><a href="GetConnected.html">Get Connected</a></li>
-                        <li class="active"><a href="ClubRecordings.html">Club Recordings</a></li>
-                        <li><a href="Resources.html">Resources</a></li>
-                        <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+        <main-header></main-header>
         <div class="container-fluid text-center" style="padding-top: 60px; padding-left: 40px; padding-bottom: 40px;">
             <div class="row content">
                 <div class="col-sm-12 text-left">
@@ -36,8 +15,6 @@
                 </div>
             </div>
         </div>
-        <footer id="footer" class="container-fluid text-center">
-            <p>&copy; DevilSec 2022 </p>
-        </footer>
+        <main-footer></main-footer>
     </body>
 </html>
