--- a/src/pages/connect.html
+++ b/src/pages/connect.html
@@ -4,28 +4,7 @@
         <title>DevilSec Get Connected</title>
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="HomePage.html"><img  src="pictures/DevilSecLogo.png"  height="50" width="50"/></a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="HomePage.html">Home</a></li>
-                        <li class="active"><a href="GetConnected.html">Get Connected</a></li>
-                        <li><a href="ClubRecordings.html">Club Recordings</a></li>
-                        <li><a href="Resources.html">Resources</a></li>
-                        <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+        <main-header></main-header>
         <div class="container-fluid text-center" style="padding-top: 70px; padding-bottom: 60px;">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://discord.gg/JFq44mJ" target="_blank">
@@ -60,10 +39,6 @@
                 </a>
             </div>
         </div>
-
-        <footer id="footer" class="container-fluid text-center">
-            <p>&copy; DevilSec 2022 </p>
-        </footer>
-
+        <main-footer></main-footer>
     </body>
 </html>
