--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -6,28 +6,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="HomePage.html"><img  src="pictures/DevilSecLogo.png"  height="50" width="50"/></a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="HomePage.html">Home</a></li>
-                        <li><a href="GetConnected.html">Get Connected</a></li>
-                        <li><a href="ClubRecordings.html">Club Recordings</a></li>
-                        <li class="active"><a href="Resources.html">Resources</a></li>
-                        <li><a href="DSSchedule.html">Schedule/Calendar</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+        <main-header></main-header>
         <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
             <div class="col-sm-10"></div>
             <h1>Getting Started</h1>
@@ -119,10 +98,6 @@
                 </div>
             </div>
         </div>
-
-        <footer id="footer" class="container-fluid text-center">
-            <b>&#169; DevilSec 2022</b>
-        </footer>
-
+        <main-footer></main-footer>
     </body>
 </html>
