--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -4,29 +4,7 @@
         <title>DevilSec Schedule</title>
     </head>
     <body>
-
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="HomePage.html"><img  src="pictures/DevilSecLogo.png"  height="50" width="50"/></a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="HomePage.html">Home</a></li>
-                        <li><a href="GetConnected.html">Get Connected</a></li>
-                        <li><a href="ClubRecordings.html">Club Recordings</a></li>
-                        <li><a href="Resources.html">Resources</a></li>
-                        <li class="active"><a href="DSSchedule.html">Schedule/Calendar</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+        <main-header></main-header>
         <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
             <div style="text-align: center;">
                 <h1 class="display-1">Event Schedule</h1>
@@ -247,10 +225,6 @@
                 </div>
             </div>
         </div>
-
-        <footer id="footer" class="container-fluid text-center">
-            <p>Footer Text</p>
-        </footer>
-
+        <main-footer></main-footer>
     </body>
 </html>
