Fixed image links

--- a/src/pages/connect.html
+++ b/src/pages/connect.html
@@ -9,7 +9,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://discord.gg/JFq44mJ" target="_blank">
                     <div class="div-highlight">
-                        <img src="pictures/discord.svg" alt="Join our Discord!" style="width:50px; height:50px;"></img>
+                        <img src="../assets/img/discord.svg" alt="Join our Discord!" style="width:50px; height:50px;"></img>
                         <p>Join our Discord server!</p>
                     </div>
                 </a>
@@ -17,7 +17,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://www.youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ" target="_blank">
                     <div class="div-highlight">
-                        <img src="pictures/youtube.svg" alt="Watch us on YouTube!" style="width:50px; height:50px;"></img>
+                        <img src="../assets/img/youtube.svg" alt="Watch us on YouTube!" style="width:50px; height:50px;"></img>
                         <p>Watch our YouTube videos!</p>
                     </div>
                 </a>
@@ -25,7 +25,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://twitter.com/devilsecasu" target="_blank">
                     <div class="div-highlight">
-                        <img src="pictures/twitter.svg" alt="Read our Tweets!" style="width:50px; height:50px;"></img>
+                        <img src="../assets/img/twitter.svg" alt="Read our Tweets!" style="width:50px; height:50px;"></img>
                         <p>Follow us on Twitter!</p>
                     </div>
                 </a>
@@ -33,7 +33,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://www.twitch.tv/devilsec" target="_blank">
                     <div class="div-highlight">
-                        <img src="pictures/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"></img>
+                        <img src="../assets/img/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"></img>
                         <p>See us live on Twitch!</p>
                     </div>
                 </a>
