Fixed column wrapping bootstrap 5 changes

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <main-header></main-header>
-        <div class="container-fluid text-center" style="padding-top: 60px; padding-left: 40px; padding-bottom: 40px;">
+        <div class="container-fluid row text-center" style="padding-top: 60px; padding-left: 40px; padding-bottom: 40px;">
             <div class="row content">
                 <div class="col-sm-12 text-left">
                     <h1>Club Recordings</h1>
