--- a/src/pages/connect.html
+++ b/src/pages/connect.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <main-header></main-header>
-        <div class="container-fluid text-center" style="padding-top: 70px; padding-bottom: 60px;">
+        <div class="container-fluid row text-center" style="padding-top: 70px; padding-bottom: 60px;">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://discord.gg/JFq44mJ" target="_blank">
                     <div class="div-highlight">
