--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -7,7 +7,7 @@
 
     <body>
         <main-header></main-header>
-        <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
+        <div class="container-fluid row text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
             <div class="col-sm-10"></div>
             <h1>Getting Started</h1>
             <h4>Cybersecurity encompasses so many areas that it's hard to know where to start. Here are some of our recommendations for learning and practicing the basics when it comes to hacking the web and beyond!</h4>
