--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <main-header></main-header>
-        <div class="container-fluid text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
+        <div class="container-fluid row text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
             <div style="text-align: center;">
                 <h1 class="display-1">Event Schedule</h1>
             </div>
@@ -14,7 +14,7 @@
 
             <div class="content text-left" style="height: 100%;">
                 <h2 class="display-4">Upcoming Events:</h2>
-                <div class="container-fluid text-center">
+                <div class="container-fluid row text-center">
                     <div class="col-md-3 boxes">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <hr class="schedule-divider"/> <!-- Increase and improve spacing to make sure there is a clear distinction between the above upcoming presentations and these sections -->
-                <div class="container-fluid text-center px-4">
+                <div class="container-fluid row text-center px-4">
                     <div class="col-md-3">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
