initial commit with changes meant for the videos page

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script src="../components/videos.js"></script>
     <head>
         <title>DevilSec Club Recordings</title>
     </head>
@@ -12,6 +13,15 @@
                 <div class="col-sm-12 text-left" style="padding-top: 20px; padding-left: 40px;">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
+
+                <flip-card variant="hover" class="trivia-card">
+                    <div slot="front">
+                        Club recording 1
+                    </div>
+                    <div slot="back">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </flip-card>
             </div>
         </div>
     </body>
